# grokdesk

./: .gitignore  AGENTS.md  LICENSE  README.de.md  README.en.md  README.ja.md  README.ko.md  README.md  design-qa.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.mjs
.github/workflows/: ci.yml  release.yml
docs/: release.md
docs/design/: imagegen-assets.md  implementation-inventory.md
scripts/: check-release-version.mjs  generate-updater-manifest.mjs  generate-updater-manifest.test.mjs  smoke-macos-package.sh  smoke-windows-package.ps1
src/: App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: verify_updater_signature.rs
src-tauri/icons/: icon.icns
src-tauri/src/: diagnostics.rs  grok_bridge.rs  lib.rs  main.rs  runtime_context.rs  runtime_extensions.rs  runtime_models.rs  task_exchange.rs  workspace.rs  workspace_terminal.rs
src-tauri/windows/: installer-hooks.nsh  repair-versioned-shortcut.vbs  versioned-shortcut.wxs
src/components/: AccountPanel.tsx  AppUpdatePanel.tsx  CommandPalette.tsx  Composer.tsx  DiagnosticCenter.tsx  FeaturePanel.tsx  Inspector.tsx  MarkdownContent.tsx  McpPanel.tsx  OnboardingPanel.tsx  PermissionCenter.tsx  PermissionDialog.tsx  PluginPanel.tsx  RuntimeContextPanel.tsx  RuntimeModelSettings.tsx  Sidebar.tsx  TaskWorkspace.tsx  TitleBar.tsx  WorkspaceChangesPanel.tsx  WorkspaceTerminalPanel.tsx  WorkspaceTestsPanel.tsx
src/data/: demo.ts
src/hooks/: useAppUpdate.ts  useAuditStore.ts  (+4 more)
(+40 files in other folders)
