[package]
name = "grokdesk"
version = "0.1.1"
description = "A native desktop workspace for Grok Build over ACP"
authors = ["GrokDesk contributors"]
edition = "2021"
license = "MIT"

[lib]
name = "grokdesk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
which = "7"
